--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,11 @@ svg {
   display: block;
   max-width: 100%;
 }
+ul,
+ol,
+li {
+  list-style: none;
+}
 button {
   background: none;
   border: 0;
